--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -5,7 +5,7 @@
     "color_body_bg": "#fdfbf7",
     "color_body_color": "#2e2a39",
     "container_max_width": 1350,
-    "border_radius": 0.3,
+    "border_radius": 0.8,
     "logo": "shopify:\/\/shop_images\/e.png",
     "favicon": "shopify:\/\/shop_images\/favicon.png",
     "font_body": "lora_n4",
@@ -27,7 +27,7 @@
     "dialog_header_title_font_size": 1.3,
     "product_card_img_mode": "carousel",
     "product_card_img_orientation": "ratio-1x1",
-    "product_card_img_border": "img-thumbnail",
+    "product_card_img_border": "",
     "product_card_carousel_controls_color": "body-color",
     "product_card_carousel_transition": "slide",
     "product_card_badge_discount_type": "value",
