--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -2,7 +2,7 @@
   "current": {
     "color_primary": "#004071",
     "color_secondary": "#9b046f",
-    "color_body_bg": "#fdfbf7",
+    "color_body_bg": "#f5f3ff",
     "color_body_color": "#2e2a39",
     "container_max_width": 1350,
     "border_radius": 0.8,
